@@ -19,8 +19,8 @@
 // ========================================================================
 //
 // File          : $RCSfile: mailbox.h,v $
-// Revision      : $Revision: 1.46 $
-// Revision date : $Date: 2005/03/04 13:10:36 $
+// Revision      : $Revision: 1.47 $
+// Revision date : $Date: 2005/03/04 14:18:59 $
 // Author(s)     : Nicolas Rougier
 // Short         : 
 //
@@ -233,6 +233,10 @@ public:
 
 	/// Access function to mailbox option "uin"
 	const guint uin (void)								{return value_uint ("uin");}
+#ifdef DEBUG
+	/// Access function to Mailbox::uin_count_ (only when debugging is enabled)
+	static guint uin_count (void)						{return uin_count_;}
+#endif
 
 	const guint timetag (void)							{return timetag_;}
 	void timetag (guint value)							{timetag_ = value;}
